--- a/chrome_extension/hello.html
+++ b/chrome_extension/hello.html
@@ -1,5 +1,6 @@
 <html>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>Welcome to CSBU's VocabVault!</h1>
+    <script src = "vvscript.js"></script>
   </body>
 </html>
