updated UI of chrome extension

--- a/vv_chrome_extension/popup/popup.html
+++ b/vv_chrome_extension/popup/popup.html
@@ -4,15 +4,15 @@
     html {
       min-height: 5em;
       min-width: 10em;
-      background: salmon;
+      background: rgb(245, 177, 92);
       font-size: large;
     }
   </style>
 </head>
   <body>
-    <h1>Welcome to Vocab Vault!</h1>
-    <p>For all your language learning needs</p>
-    <img src = "../images/csbulogo128.png" id = "logo">
+    <h1><center>Welcome to Vocab Vault!</center></h1>
+    <p><center>For all your language learning needs</center></p>
+    <p style="text-align:center;"> <img src = "../images/csbulogo128.png" id = "logo"  > </p>
     <button id = "gotowebsite">Go to the official webpage!</button>
     <script src="popup.js"></script>
   </body>
