--- a/vv_chrome_extension/popup/popup.html
+++ b/vv_chrome_extension/popup/popup.html
@@ -13,7 +13,7 @@
       }
       textarea {
         width: 100%;
-        height: 100px;
+        height: 40px;
         resize: none;
       }
       select {
@@ -40,7 +40,7 @@
     <p>Translated text will be displayed here:</p>
     <p id="translatedText"></p>
     <p style="text-align:center;"> <img src = "../images/csbulogo128.png" id = "logo"  > </p>
-    <button onclick="gotoVault()" id = "gotowebsite">Go to the official webpage!</button>
+    <button id = "gotoVault">Go to your Vault</button>
     <script src="popup.js"></script>
   </body>
 </html>
