setting up flashcard html

--- a/vocab-vault/src/flashcard_setup.html
+++ b/vocab-vault/src/flashcard_setup.html
@@ -4,10 +4,9 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0" />
         <title> Vault </title>
-
         <script src="https://kit.fontawesome.com/248b261321.js" crossorigin="anonymous">
         </script>
-
+        <link rel="stylesheet" href="./flashcard_style.css" />
     </head>
     <body>
         <font face = "arial">arial</font>
